# helloKingchat

./: build-profile.json5
AppScope/: app.json5
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/pages/: Index.ets  helloKingchat.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
kingchat/: .gitignore  Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
kingchat/src/main/: module.json5
kingchat/src/main/cpp/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  MediaStreamTrackFactory.cpp  MediaStreamTrackFactory.h  napi_init.cpp
kingchat/src/main/cpp/client/: conductor.cc  conductor.h  defaults.cc  main_wnd.h  peer_connection_client.cc  peer_connection_client.h
kingchat/src/main/cpp/client/ohos/: main_wnd.cc  main_wnd.h  peer_sample.cc  peer_sample.h
kingchat/src/main/cpp/common/: log_common.h
kingchat/src/main/cpp/plugin/: plugin_manager.cpp  plugin_manager.h
kingchat/src/main/cpp/samples/: sample_bitmap.cpp  sample_bitmap.h
kingchat/src/main/cpp/types/libkingchat/: Index.d.ts  oh-package.json5
kingchat/src/main/cpp/utils/: utilCallJs.cpp  utilCallJs.h
kingchat/src/main/cpp/webRTC_adapter/: ohos_camera.cpp  ohos_camera.h  ohos_camera_capture.cpp  ohos_camera_capture.h  ohos_capturer_track_source.cpp  ohos_capturer_track_source.h  ohos_codec_data.cpp  ohos_codec_data.h  ohos_common.h  ohos_video_common.h  ohos_video_encoder.cpp  ohos_video_encoder.h
kingchat/src/main/ets/components/: MainPage.ets
kingchat/src/main/ets/entryability/: EntryAbility.ets
kingchat/src/main/ets/interface/: XComponentContext.ts
kingchat/src/main/ets/kingchat/: roomClient.ts
kingchat/src/main/ets/pages/: Index.ets
kingchat/src/main/ets/protooClient/: Message.ts  Peer.ts
kingchat/src/main/ets/protooClient/transports/: WebSocketTransport.ts
kingchat/src/main/ets/utils/: Logger.ts  Utils.ts  define.ts
kingchat/src/ohosTest/: module.json5
